--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: "Cairo", serif;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  direction: rtl;
+}
+
+section {
+  background-image: url(../src/bg.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+
+}
+
+section .container {
+  width: 650px;
+  background-color: #332a224e;
+  padding: 30px 25px;
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid #d7d7d74e;
+  margin-right: 15%;
+
+}
+
+.top-sec {
+  display: flex !important;
+  justify-content: space-between !important;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #d7d7d74e;
+  margin-bottom: 20px;
+}
+  
+.top-sec select {
+  width: 250px;
+  border-radius: 5px;
+  outline: none;
+  background-color: #a54f3a;
+  padding: 2px 10px;
+  color: #fff;
+  font-size: 22px;
+  margin-top: 10px;
+}
+
+.top-sec h3 {
+  font-size: 30px;
+  color: #fff;
+}
+
+.top-sec .date {
+  width: 250px;
+}
+
+.top-sec .date h4 {
+  font-size: 26px;
+  color: #fff;
+}
+.prayer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center !important;
+  padding: 5px 25px;
+  background: #c0583e75;
+  margin-bottom: 25px;
+  color: #fff;
+  font-size: 24px;
+  border-bottom: 1px solid #d7d7d74e;
 }
